# classcharts-rs

./: Cargo.toml  LICENSE  README.md
cc.veloi.me/: index.html
examples/: basic.rs
src/: client.rs  lib.rs  macros.rs
src/api/: activity.rs  announcements.rs  attendance.rs  badges.rs  behaviour.rs  detentions.rs  helpers.rs  homework.rs  lessons.rs  mod.rs  pupilfields.rs  rewards.rs  student.rs
