[package]
name = "classcharts"
version = "1.0.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "cookies"] }
thiserror = "1.0.48"
urlencoding = "2.1.3"
url = "2.4.1"
async-trait = "0.1.73"
chrono = "0.4.31"
httpmock = "0.6.6"
