[package]
name = "classcharts"
version = "1.0.0"
edition = "2021"
license = "MIT"
keywords = ["api", "education", "http"]
categories = ["web-programming::http-client"]
include = ["/src", "LICENSE", "/examples"]
exclude = [".*", "/images"]
repository = "https://github.com/veloii/classcharts-rs/"
documentation = "https://cc.veloi.me/"
description = "Unoffical classcharts library for rust."

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "multipart", "cookies"] }
thiserror = "1.0.48"
urlencoding = "2.1.3"
url = "2.4.1"
async-trait = "0.1.73"
chrono = "0.4.31"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
httpmock = "0.6.6"
